--- a/scripts/00_process_fish_tickets_for_networks.Rmd
+++ b/scripts/00_process_fish_tickets_for_networks.Rmd
@@ -222,7 +222,143 @@ if(crab_year){
 }
 ```
 <br>
+
+# 3: Append Vessel Lengths
+
+## 3.1. Vessel Registration Data
+
+
+## 3.2. Calculate Vessel Lengths
+
+Initiate empty data frame for all vessel length data across years
+```{r}
+vessel_length_key_df <- tibble("drvid" = character(),
+                               "agency_code" = character(),
+                               "year" = numeric(),
+                               "FINAL_LENGTH" = numeric(),
+                               "TYPE_CALC" = character(),
+                               "UNIQUE_LENGTHS" = numeric(),
+                               "N_YEARS_LENGTH_RECORDED" = numeric(),
+                               "HISTORIC_DATA" = character())
+```
+
+Do the calculation of vessel lengths.
+```{r}
+for(y in unique(vessels$year)){
+  # take only the vessels fishing in year "y"
+  year_vessels <- filter(vessels, year == y)
+  
+  # identify the years of regulation data to pull
+  target_reg_years <- seq(y-2, y)
+  
+  # subset for target registration years and summarise permits for each vessel
+  cat("Calculating 3yr summary statistics for vessels in ", y, "\n")
+  pthin_sumstats <- pthin_length_filter %>%
+    filter(REGISTRATION_YEAR %in% target_reg_years,!is.na(VESSEL_LENGTH)) %>%
+    group_by(VESSEL_NUM, AGENCY_CODE) %>%
+    arrange(desc(REGISTRATION_YEAR)) %>%
+    summarise(n_lengths = length(VESSEL_LENGTH),
+              n_unique = length(unique(VESSEL_LENGTH)),
+              max_length = max(VESSEL_LENGTH),
+              min_length = min(VESSEL_LENGTH),
+              mean2yr = get2yrmean(x=VESSEL_LENGTH, years=REGISTRATION_YEAR)) %>% 
+    ungroup()
+  
+  # create empty vectors for this year
+  final_vessel_lengths <- c()
+  length_calc_vec <- c()
+  n_unique_vec <- c()
+  n_lengths_vec <- c()
+  historic_vec <- c()
+  processed <- 0
+  
+  cat("Calculating vessel lengths for fishing vessels in ", y, "...\n")
+  # for each vessel fishing in this year #
+  for(i in seq(1:length(year_vessels$drvid))){
+    ## use the calc_length function (loaded from the "functions.R" file) to calculate vessel length
+    tmp_vessel_length_info <- calc_length(permits=permits, vesseldat = year_vessels, lengthdat = pthin_length_filter, summarydat = pthin_sumstats, index = i)
+    ## save the calc_length output to the appropriate position ("i") in the output vectors for this year
+    n_lengths_vec[i] <- tmp_vessel_length_info[1] %>% as.numeric()
+    n_unique_vec[i] <- tmp_vessel_length_info[2] %>% as.numeric()
+    final_vessel_lengths[i] <- tmp_vessel_length_info[3] %>% as.numeric()
+    length_calc_vec[i] <- tmp_vessel_length_info[4]
+    ## if the vessel had to be calculated with historical data from over 5 years ago, a warning message will be saved in the calc_length output
+    if(length(tmp_vessel_length_info) > 4){
+      ### print the warning message
+      print(tmp_vessel_length_info[5])
+      ### save "Y" to the historic_vec for this year
+      historic_vec[i] <- "Y"
+    } else{ historic_vec[i] <- "N" }
+    processed <- processed + 1
+  }
+  cat("Done processing", processed, "vessels for", y, "\n")
+  # save allof the output vectors to a data frame for this year
+  tmp_vessel_length_key_df <- tibble("drvid" = year_vessels$drvid,
+                                     "agency_code" = year_vessels$agency_code,
+                                     "year" = year_vessels$year,
+                                     "FINAL_LENGTH" = final_vessel_lengths,
+                                     "TYPE_CALC" = length_calc_vec,
+                                     "UNIQUE_LENGTHS" = n_unique_vec,
+                                     "N_YEARS_LENGTH_RECORDED" = n_lengths_vec,
+                                     "HISTORIC_DATA" = historic_vec)
+  ## bind this year's data frame to the end of the full data frame
+  vessel_length_key_df <- bind_rows(vessel_length_key_df, tmp_vessel_length_key_df)
+  cat("Wrote out", dim(tmp_vessel_length_key_df)[1], "lengths for", y, " to final data frame\n\n")
+}
+```
 <br>
+
+## 3.3. Check Vessel Lengths
+
+What is the distribution of vessel lengths?
+```{r echo=FALSE}
+vessel_length_key_df %>% 
+    filter(!is.na(FINAL_LENGTH)) %>% 
+    ggplot(aes(as.numeric(FINAL_LENGTH))) +
+      geom_histogram(bins=10) +
+      facet_wrap(~year) +
+      labs(x="Vessel Length",y="Number of Vessels",title="Vessel Length Frequency Distribution")
+```
+<br>
+
+Which calculations were used to estimate vessel lengths? Ideally, the frequency of *unique_1* and *olddat_unique_1* will be low.
+```{r echo=FALSE}
+vessel_length_key_df %>% 
+    ggplot(aes(vessel_length_key_df$TYPE_CALC)) +
+    geom_bar() +
+    facet_wrap(~year) +
+    labs(x="Calculation Type",y="Number of Vessels")+
+    theme(axis.text.x = element_text(angle=90, hjust=1))
+```
+<br>
+
+How many vessel lengths are missing?
+```{r echo=FALSE}
+cat(sum(is.na(vessel_length_key_df$FINAL_LENGTH)), 'vessels with Vessel ID numbers are missing calculated lengths, or', sum(is.na(vessel_length_key_df$FINAL_LENGTH)) / length(vessel_length_key_df$FINAL_LENGTH)*100, 'percent.')
+```
+<br>
+
+```{r echo=FALSE}
+for(y in unique(vessel_length_key_df$year)){
+  for(a in unique(vessel_length_key_df$agency_code)){
+    tmp_dat <- vessel_length_key_df %>%
+      filter(agency_code == a) %>%
+      filter(year == y)
+    missing <- sum(is.na(tmp_dat$FINAL_LENGTH))
+    cat("Number", y, "Vessels Missing Vessel Lengths for", a, ":", missing, "\n")
+    cat("Proportion:", missing/length(tmp_dat$FINAL_LENGTH), "\n\n")
+  }
+}
+```
+<br>
+
+
+# 4: Write out fish tickets with length
+
+```{r}
+```
+<br>
+
 
 ---
 
