--- a/scripts/08_nested_GLMs.Rmd
+++ b/scripts/08_nested_GLMs.Rmd
@@ -19,7 +19,7 @@ fontsize: 11pt
 
 # Description
 
-Run nested generalized linear models (GLMs) for each network statistic. Code and GLM structure based on modeling conducted by Sunny Jardine for Jardine et al. (2020) doi: [10.1016/j.ecolecon.2020.106691](https://doi.org/10.1016/j.ecolecon.2020.106691).
+Run nested generalized linear models (GLMs) for each network statistic. Code and GLM structure based on modeling conducted by Dr. Sunny Jardine for Jardine et al. (2020) doi: [10.1016/j.ecolecon.2020.106691](https://doi.org/10.1016/j.ecolecon.2020.106691).
 
 We use robust standard errors to address the assumption of homoskedasticity of errors (implemented by `coeftest`). Although we do not think that the error terms are independent draws, clustering can underestimate the standard errors, so clustering is not used in this version of model testing.
 
@@ -37,7 +37,6 @@ Explanatory variables include:
 5. N: number of nodes (network size; see script 07)
 
 Every GLM will include an interaction between the region and the closure duration; this decision was made after visually evaluating the network graphs.
-
 
 This script has hard-coded the network metrics for GLMs; if you want to use any metrics not included in Fisher et al., you will need to manually edit the following code, and decide which link functions to use for each set of GLMs.
 
@@ -128,7 +127,7 @@ ldata$D <- factor(ldata$D, levels=c("none", "low", "medium", "high"))
 ```
 <br>
 
-# 2: GLMs
+# 2. GLMs
 
 ## 2.1. Edge Density
 
