--- a/scripts/figures/Fig2.Rmd
+++ b/scripts/figures/Fig2.Rmd
@@ -1,306 +1,365 @@
 ---
-title: "Run GLMs with Standardized Regression Predictors"
-author: M. Fisher
-date: Last Run (`r Sys.time()`)
-output: 
-  html_document:
-    toc: true
+title: "GLM Results with Scaled Coefficients - Figure 2"
+author: "Mary Fisher"
+date: "10/11/2020"
+output: html_document
 ---
 
-This script uses the `standardize` function from the `arm` package to standardize the input variables [port group, region, Node count] in the generalized linear models for each network metric / period.
+# Description
 
-Coefficients of interest (region*duration) from the standardized model are plotted.
+Graph the coefficients from the generalized linear models (GLMs), quantifying change in undirected participation networks, alongside the network metrics across closure durations. Input variables for the GLMs were standardized using the `standardize` function from the `arm` package in script 10.
 
---
+The network metrics and GLMs used in this script are hard-coded. To change the network metrics included in the figure, edit the *metrics* code chunk. Then re-run script `10_standardize_GLMs` to update the GLM coefficient input file.
 
-*From `standardize` documentation: Numeric variables that take on more than two values are each rescaled to have a mean of 0 and a sd of 0.5; Binary variables are rescaled to have a mean of 0 and a difference of 1 between their two categories; Non-numeric variables that take on more than two values are unchanged*
+For more details on how udirected participation networks are built and interpreted, see the [Guide to Undirected Networks: Cross-Fishery Participation](https://github.com/mfisher5/ParticipationNetworks/blob/master/doc/Guide_To_Undirected_Networks.md) on Github.
 
 
 ```{r setup, include=FALSE}
-library(stargazer)
-library(lmtest)
-library(sandwich)
-library(tidyverse)
-library(arm)
-library(cowplot)
+if(!require("here")) {install.packages("here")}
 library(here)
-library(PNWColors)
-library(grid);library(gridExtra)
+knitr::opts_chunk$set(echo = TRUE)
+knitr::opts_knit$set(root.dir = here::here())
 
-knitr::opts_chunk$set(root.dir=here::here(),echo = TRUE)
+## start time for full script
+script_start_time <- Sys.time()
 ```
 <br>
 
-### Data
+This script requires the following packages. 
+```{r packages, message=FALSE, warning=FALSE}
+if(!require("tidyverse")) {install.packages("tidyverse")}
+if(!require("plotrix")) {install.packages("plotrix")}   # for standard error
+if(!require("facetscales")) {install.packages(devtools::install_github("zeehio/facetscales"))} 
+if(!require("cowplot")) {install.packages("cowplot")}
+if(!require("ggpubr")) {install.packages("ggpubr")}
+if(!require("grid")) {install.packages("grid")}
+if(!require("gridExtra")) {install.packages("gridExtra")}
+```
+<br>
 
-Read in
+# User Inputs 
+
+The network metrics and GLMs for each metric are hard-coded into this script. 
+
+Select your directories.
+```{r get_dir}
+## location of igraph objects
+indir <- 'results/statistics'
+```
+<br>
+
+What is the name of the file with the network statistics?
 ```{r}
-# Network stats
-data <- read.csv(here::here("results/statistics","2007_2016_CA_CrabPorts_2015HAB_NoSubgraph_rmCrab_01contribution.csv"))
-colnames(data)
+statfile <- '2008_2017_CA_ParticipationNetworkMetrics.csv'
+```
+<br>
 
-data <- data %>% dplyr::select(y, nc, nc_weighted, ed, mean_deg,m, m_weighted, N, period, pcgroup) %>%
+What is the name of the file with the scaled GLM coefficients?
+```{r}
+coeffile <- '2008_2017_CA_ParticipationNetworkMetrics_ScaledGLMs.csv'
+```
+<br>
+
+
+# 1. Data
+
+## 1.1. Network Metrics
+
+Select the three main network metrics, and assign port groups to a region.
+```{r metrics}
+data <- read.csv(here::here(indir, statfile)) %>%
+  dplyr::select(y,period, pcgroup, ed, nc_weighted,m_weighted, mean_deg, nc, m) %>%
   mutate(R = ifelse(pcgroup %in% c("CCA", "ERA", "BGA","BDA"), "North", "Central"))
-
-data$R <- factor(data$R, levels=c("North","Central"))
-
-# Closure Duration
-closure_data <- read.csv(here::here("data/input","DCRB_Historic_Closures_CA_updated.csv"))
-closure_data <- closure_data %>%
-  mutate(D = ifelse(days.closed == 0, "none", ifelse(days.closed < 50, "medium", "high")))
+colnames(data)
 ```
 <br>
 
-Combine stats / closure data
+Add the data on Dungeness crab closures to the network metrics data frame.
 ```{r}
+closure_data <- read.csv(here::here('data/input', 'DCRB_Historic_Closures_CA_updated.csv')) %>%
+  mutate(D = ifelse(days.closed == 0, "none", ifelse(days.closed < 50, "medium", "high")))
+
 data <- left_join(data, closure_data, by=c("y", "pcgroup"))
 data$D <- as.factor(data$D)
 data$D <- factor(data$D, levels=c("none", "medium", "high"))
 ```
-<br>
 
-Recode port group names as 1-7
+
+Calculate the mean of each network metric for all closure duration / region combinations.
 ```{r}
-data$pcgroup <- as.numeric(data$pcgroup)
+duration_avg <- data %>%
+  dplyr::select(-days.closed, -y) %>%
+  pivot_longer(cols=c(ed,nc_weighted,m_weighted,mean_deg,nc,m), names_to="metric") %>%
+  group_by(D,period,R,metric) %>%
+  summarise(avg=mean(value,na.rm=TRUE),se=std.error(value,na.rm=TRUE))
 ```
 <br>
 
-Split into early and late season
+## 1.2. GLM Coefficients
+
+Read in the file produced by script `10_standardize_GLMs.Rmd`
 ```{r}
-edata <- filter(data, period == "early") # early season
-ldata <- filter(data, period == "late") # late season
+glmcoef <- read.csv(here::here(indir,coeffile))
 ```
 <br>
 
-### Scale Coefficients
-
-This function extracts coefficient values from the `standardize` function. the input variable "m" is the GLM model object.
+Select GLM input variables to include in figure; adjust variable names / factor levels for better graphing.
 ```{r}
-get_sc_coef <- function(m,name,season){
-  display(arm::standardize(m))
-  tmpdat <- as.data.frame(arm::standardize(m)$coefficients)
-  colnames(tmpdat) <- c("coefficients")
-  tmpdat <- mutate(tmpdat, variable=rownames(tmpdat),
-                   metric=name, season=season)
-  return(tmpdat)
-}
+glmcoef <- glmcoef %>%
+  filter(variable != "D (medium)") %>%
+  mutate(variable=recode(variable,`D (high) : R (Central)`="Duration (high):\n Region (Central)",
+                     `D (high)`="Duration\n (high)",
+                     `R (Central)` = "Region\n (Central)"),
+         dat="Model Coefficients")
+glmcoef$variable <- factor(glmcoef$variable, levels=c("Duration (high):\n Region (Central)",
+                                                  "Duration\n (high)","Duration\n (medium)",
+                                                  "Region\n (Central)","Size","Port Group"))
+glmcoef$metric <- factor(glmcoef$metric,levels=c("Edge Density","Centralization","Modularity"))
 ```
 <br>
 
-Run each GLM and grab the coefficients.
+# 2. Graph
+
+Prepare for graphing - clean up variable names, factor levels.
 ```{r}
-##### Edge Density, with Node predictor #####
-eN.e <- glm(ed ~ D*R + N + pcgroup, data = edata, family = quasibinomial('logit'))
-ei <- get_sc_coef(eN.e, name="Edge Density",season="Early Season")
-
-eN.l <- glm(ed ~ D*R + N + pcgroup, data = ldata, family = quasibinomial('logit'))
-el <- get_sc_coef(eN.l, name="Edge Density",season="Late Season")
-
-##### Weighted Centralization, with Node predictor #####
-ncWN.e <- glm(nc_weighted ~ D*R+N, data = edata, family = quasibinomial('logit'))
-ci <- get_sc_coef(ncWN.e, name="Centralization",season="Early Season")
-
-ncWN.l <- glm(nc_weighted ~ D*R+N+pcgroup, data = ldata, family = quasibinomial('logit'))
-cl <- get_sc_coef(ncWN.l, name="Centralization",season="Late Season")
-
-##### Weighted Modularity, with Node predictor #####
-mWN.e <- glm(m_weighted ~ D*R + N, data = edata, family = gaussian('identity'))
-mi <- get_sc_coef(mWN.e, name="Modularity",season="Early Season")
-
-mWN.l <- glm(m_weighted ~ D*R + N + pcgroup, data = ldata, family = gaussian('identity'))
-ml <- get_sc_coef(mWN.l, name="Modularity",season="Late Season")
+duration_avg <- as.data.frame(duration_avg) %>%
+  filter(metric %in% c("ed","nc_weighted","m_weighted")) %>%
+  mutate(metric=recode(metric, ed="Edge Density",nc_weighted="Centralization",m_weighted="Modularity"),
+         period=recode(period, early="Early Season", late="Late Season"),
+         D=recode(D,none="None\n",medium="Medium\n",high="High\n")) %>%
+  rename(season=period,Region=R) %>%
+  mutate(dat="Values")
+duration_avg$metric <- factor(duration_avg$metric,levels=rev(c("Edge Density","Centralization","Modularity")))
 ```
 <br>
 
-Combine coefficients across GLMs.
+Specify the axis limits for each metric (*implemented using `facetscales` package*)
 ```{r}
-mydat <- ei %>%
-  bind_rows(el) %>%
-  bind_rows(ci) %>%
-  bind_rows(cl) %>%
-  bind_rows(mi) %>%
-  bind_rows(ml) %>%
-  filter(!is.na(coefficients)) %>%
-  filter(variable != "(Intercept)")
-
-mydat$variable <- as.factor(mydat$variable)
-mydat$variable <- recode(mydat$variable,Dmedium="D (medium)",Dhigh="D (high)",
-                         `c.R`="R (Central)",`z.N`="Size",`z.pcgroup`="Port Group",
-                         `Dhigh:c.R`="D (high) : R (Central)")
-mydat$variable <- factor(mydat$variable, levels=c("D (high) : R (Central)",
-                                                  "D (medium)","D (high)",
-                                                  "R (Central)","Size","Port Group"))
-mydat$metric <- factor(mydat$metric,levels=rev(c("Edge Density","Centralization","Modularity")))
+scales_y <- list(
+  `Edge Density` = scale_y_continuous(limits = c(0,0.7)),
+  `Centralization` = scale_y_continuous(limits = c(0,0.7)),
+  `Modularity` = scale_y_continuous(limits=c(-0.4,0.6),breaks=seq(-0.4,0.6,by=0.2))
+)
 ```
 <br>
 
+## 2.1. Early Season
 
-Add in significance (from stargazer tables, model output)
+Metric values
 ```{r}
-sigdf.e <- data.frame(season="Early Season",
-                      metric=c(rep("Edge Density",6),rep("Centralization",6),rep("Modularity",6)),
-                    variable=rep(c("D (high) : R (Central)",
-                                   "D (medium)","D (high)",
-                                   "R (Central)","Size","Port Group"),3),
-                    sig=c("***","","***","","**",NA,
-                          "***","","***","","***",NA,
-                          "","","","","***",NA))
-sigdf.l <- data.frame(season="Late Season",
-                      metric=c(rep("Edge Density",6),rep("Centralization",6),rep("Modularity",6)),
-                    variable=rep(c("D (high) : R (Central)",
-                                   "D (medium)","D (high)",
-                                   "R (Central)","Size","Port Group"),3),
-                    sig=c("","","","","***",NA,
-                          "","","","","*",NA,
-                          "","","","","***",NA))
-sigdf <- rbind(sigdf.e,sigdf.l)
-mydat <- left_join(mydat,sigdf, by=c("variable","metric","season"))
-
-mydat <- mutate(mydat, adj_x=ifelse(coefficients<0,coefficients-0.1,coefficients+0.1))
-mydat$variable <- factor(mydat$variable, levels=c("D (high) : R (Central)",
-                                                  "D (high)","D (medium)",
-                                                  "R (Central)","Size","Port Group"))
+datplot.e <- ggplot(data=filter(duration_avg,season=="Early Season"), aes(x=D,y=avg)) +
+  geom_point(aes(col=Region,pch=Region),size=2.5) +
+  geom_path(aes(col=Region,group=Region),size=1) +
+  geom_errorbar(aes(ymin=avg-se,ymax=avg+se,col=Region,group=Region), width=0.2) +
+  facet_grid_sc(cols=vars(dat), rows = vars(metric), as.table=FALSE,scales=list(y = scales_y), switch="y") +
+  scale_color_manual(values=c("dodgerblue3","aquamarine4"), name="Region") +
+  scale_shape_manual(values=c(15,16)) +
+  xlab("Closure Duration") +
+  theme_bw() + theme(legend.position="left",
+                     axis.title.y=element_blank(),
+                     panel.grid.major.y=element_blank(),
+                     panel.grid.minor.y=element_blank(),
+                     strip.background.x=element_rect("white"),
+                     strip.text=element_text(size=11),
+                     strip.placement = "outside")
 ```
-<br>
 
-
-### Plot
+GLM Coefficients
 ```{r}
-myplot <- ggplot(data=filter(mydat,variable %in% c("D (high) : R (Central)","D (high)", "D (medium)", "R (Central)","Size")),
-                 aes(x=metric ,y=coefficients, fill=metric)) +
-  geom_col() +
-  geom_text(aes(x=metric ,y=adj_x,label=sig,angle=90),size=4) +
+glmplot.e <- ggplot(data=filter(glmcoef,season=="Early Season"), aes(x=variable,y=coefficients)) +
+  geom_col(fill="grey60") +
+  geom_text(aes(x=variable,y=adj_x,label=sig),size=4) +
   geom_hline(yintercept=0, color="grey40",lty="longdash") +
-  facet_grid(cols=vars(season),rows=vars(variable), switch="y") +
-  scale_fill_manual(values=rev(pnw_palette(name="Starfish",n=3,type="discrete"))) +
-  xlab("") +
-  ylab("Coefficient") +
-  ylim(c(-2,2.5)) +
-  coord_flip() +
-  theme_bw() +
-  theme(panel.grid.major.y=element_blank(),panel.grid.minor.y=element_blank(),
-        legend.position="none",
-        axis.text.y=element_text(size=14),
-        strip.text=element_text(size=14),
-        axis.title.x=element_text(size=12))
+  facet_grid(cols=vars(dat), rows=vars(metric), switch="y") +
+  scale_y_continuous(position="right", limits=c(-2.5,2.5)) + 
+  xlab("Model Coefficient") +
+  theme_bw() + theme(legend.position="none",
+                     axis.title.y=element_blank(),
+                     panel.grid.major.y=element_blank(),
+                     panel.grid.minor.y=element_blank(),
+                     strip.text.y=element_blank(),
+                     strip.text.x=element_text(size=11),
+                     strip.background.y=element_blank(),
+                     strip.background.x=element_rect("white"),
+                     strip.placement = "outside")
 
-print(myplot)
+```
+<br>
 
-png(here::here("output/linear_models/CoefStandard_3metrics_barplot_update12-13.png"),height=650,width=480)
-print(myplot)
+```{r echo=FALSE}
+plot_grid(datplot.e,glmplot.e, rel_widths=c(0.8,1),labels="(a)")
+
+# ggsave(filename=here::here('results/figures','Figure2a.png'),plot=plot_grid(datplot.e,glmplot.e, rel_widths=c(0.8,1),labels="(a)"))
+```
+<br>
+
+
+## 2.2. Late Season
+
+Metric values
+```{r}
+datplot.l <- ggplot(data=filter(duration_avg,season=="Late Season"), aes(x=D,y=avg)) +
+  geom_point(aes(col=Region,pch=Region),size=2.5) +
+  geom_path(aes(col=Region,group=Region),size=1) +
+  geom_errorbar(aes(ymin=avg-se,ymax=avg+se,col=Region,group=Region), width=0.2) +
+  facet_grid_sc(cols=vars(dat), rows = vars(metric), as.table=FALSE,scales=list(y = scales_y), switch="y") +
+  scale_color_manual(values=c("dodgerblue3","aquamarine4"), name="Region") +
+  scale_shape_manual(values=c(15,16)) +
+  xlab("Closure Duration") +
+  theme_bw() + theme(legend.position="left",
+                     axis.title.y=element_blank(),
+                     panel.grid.major.y=element_blank(),
+                     panel.grid.minor.y=element_blank(),
+                     strip.background.x=element_rect("white"),
+                     strip.text=element_text(size=11),
+                     strip.placement = "outside")
+```
+<br>
+
+GLM coefficients
+```{r}
+glmplot.l <- ggplot(data=filter(glmcoef,season=="Late Season"), aes(x=variable,y=coefficients)) +
+  geom_col(fill="grey30") +
+  geom_text(aes(x=variable,y=adj_x,label=sig),size=4) +
+  geom_hline(yintercept=0, color="grey40",lty="longdash") +
+  facet_grid(cols=vars(dat), rows=vars(metric), switch="y") +
+  scale_fill_manual(values=c("grey60","grey30")) +
+  scale_y_continuous(position="right", limits=c(-2,2.5)) +  
+  xlab("Variable") +
+  theme_bw() + theme(legend.position="none",
+                     axis.title.y=element_blank(),
+                     panel.grid.major.y=element_blank(),
+                     panel.grid.minor.y=element_blank(),
+                     strip.text.y=element_blank(),
+                     strip.background.y=element_blank(),
+                     strip.background.x=element_rect("white"),
+                     strip.text.x=element_text(size=11),
+                     strip.placement = "outside")
+```
+<br>
+
+```{r echo=FALSE}
+plot_grid(datplot.l,glmplot.l, rel_widths=c(0.8,1),labels="(b)")
+
+# ggsave(filename=here::here('results/figures','Figure2b.png'),plot=plot_grid(datplot.l,glmplot.l, rel_widths=c(0.8,1),labels="(b)"))
+
+```
+<br>
+
+
+## Figure 2
+
+Simplify the x axis breaks for each metric (*implemented using `facetscales` package*), and the metric labels.
+```{r}
+scales_y <- list(
+  `E.D.` = scale_y_continuous(limits = c(0,0.7), breaks=c(0,0.3,0.6)),
+  `Central.` = scale_y_continuous(limits = c(0,0.7), breaks=c(0,0.3,0.6)),
+  `Mod.` = scale_y_continuous(limits=c(-0.6,0.6),breaks=seq(-0.6,0.6,by=0.3))
+)
+
+duration_avg <- duration_avg %>%
+  mutate(metric=recode(duration_avg$metric, `Edge Density` = "E.D.", Centralization = "Central.",
+                                                   Modularity="Mod."),
+         D=recode(D,`None\n`="None",`Medium\n`="Medium",`High\n`="High")) 
+```
+<br>
+
+The significance markers for negative coefficients need to be adjusted a bit.
+```{r}
+glmcoef <- glmcoef %>%
+  mutate(adj_x=ifelse(adj_x >= 0, adj_x, adj_x-0.19))
+```
+<br>
+
+Remove the X axis information from part (a) - Early Season. Make the line width a little smaller.
+```{r}
+datplot.e <- ggplot(data=filter(duration_avg,season=="Early Season"), aes(x=D,y=avg)) +
+  geom_point(aes(col=Region,pch=Region),size=2) +
+  geom_path(aes(col=Region,group=Region),size=0.5) +
+  geom_errorbar(aes(ymin=avg-se,ymax=avg+se,col=Region,group=Region), width=0.2) +
+  facet_grid_sc(cols=vars(dat), rows = vars(metric), as.table=FALSE, scales=list(y = scales_y), switch="y") +
+  scale_color_manual(values=c("dodgerblue3","aquamarine4"), name="Region") +
+  scale_shape_manual(values=c(17,16)) +
+  theme_bw() + theme(legend.position="left",
+                     legend.text=element_text(size=11),
+                     axis.title=element_blank(),
+                     axis.text.x=element_blank(),
+                     panel.grid.major.y=element_blank(),
+                     panel.grid.minor.y=element_blank(),
+                     strip.background.x=element_rect("white"),
+                     strip.text.x=element_text(size=11),
+                     strip.text.y=element_text(size=11),
+                     strip.placement = "outside")
+
+glmplot.e <- ggplot(data=filter(glmcoef,season=="Early Season"), aes(x=variable,y=coefficients)) +
+  geom_col(fill="grey50") +
+  geom_text(aes(x=variable,y=adj_x,label=sig),size=4) +
+  geom_hline(yintercept=0, color="grey40",lty="longdash") +
+  facet_grid(cols=vars(dat), rows=vars(metric), switch="y") +
+  scale_y_continuous(position="right", limits=c(-2.5,2.5), breaks=c(-2,0,2)) + 
+  theme_bw() + theme(legend.position="none",
+                     axis.title=element_blank(),
+                     axis.text.x=element_blank(),
+                     panel.grid.major.y=element_blank(),
+                     panel.grid.minor.y=element_blank(),
+                     strip.text.y=element_blank(),
+                     strip.text.x=element_text(size=11),
+                     strip.background.y=element_blank(),
+                     strip.background.x=element_rect("white"),
+                     strip.placement = "outside")
+```
+<br>
+
+Remove the strip text labels, Rotate the x axis labels, make the line width a little smaller.
+```{r}
+datplot.l <- ggplot(data=filter(duration_avg,season=="Late Season"), aes(x=D,y=avg)) +
+  geom_point(aes(col=Region,pch=Region),size=2) +
+  geom_path(aes(col=Region,group=Region),size=0.5) +
+  geom_errorbar(aes(ymin=avg-se,ymax=avg+se,col=Region,group=Region), width=0.2) +
+  facet_grid_sc(rows = vars(metric), as.table=FALSE,scales=list(y = scales_y), switch="y") +
+  scale_color_manual(values=c("dodgerblue3","aquamarine4"), name="Region") +
+  scale_shape_manual(values=c(17,16)) +
+  xlab("Closure Duration") +
+  theme_bw() + theme(legend.position="none",
+                     axis.title.y=element_blank(),
+                     axis.text.x=element_text(angle=90,hjust=1, vjust=0.5, margin = margin(t = 0, r = 0, b = 37, l = 0)),
+                     panel.grid.major.y=element_blank(),
+                     panel.grid.minor.y=element_blank(),
+                     strip.background.x=element_rect("white"),
+                     strip.text=element_text(size=11),
+                     strip.placement = "outside",
+                     plot.margin = unit(c(5.5,5.5,5.5,86), "pt"))
+
+glmplot.l <- ggplot(data=filter(glmcoef,season=="Late Season"), aes(x=variable,y=coefficients)) +
+  geom_col(fill="grey50") +
+  geom_text(aes(x=variable,y=adj_x,label=sig),size=4) +
+  geom_hline(yintercept=0, color="grey40",lty="longdash") +
+  facet_grid(rows=vars(metric), switch="y") +
+  scale_fill_manual(values=c("grey60","grey30")) +
+  scale_y_continuous(position="right", limits=c(-2.5,2.5), breaks=c(-2,0,2)) +  
+  xlab("Variable") +
+  theme_bw() + theme(legend.position="none",
+                     axis.title.y=element_blank(),
+                     axis.text.x=element_text(angle=90,hjust=1,vjust=0.5),
+                     panel.grid.major.y=element_blank(),
+                     panel.grid.minor.y=element_blank(),
+                     strip.text.y=element_blank(),
+                     strip.background.y=element_blank(),
+                     strip.placement = "outside")
+```
+<br>
+
+```{r}
+plot.out <- grid.arrange(grobs=list(datplot.e, glmplot.e, datplot.l, glmplot.l), nrow=2, ncol=2, widths=c(1, 0.75), heights=c(0.7,1))
+
+# Add labels to the arranged plots
+p <- as_ggplot(plot.out) +                                # transform to a ggplot
+  draw_plot_label(label = c("(a)", "(b)"), size = 11,
+                  x = c(0.15, 0.15), y = c(1, 0.6)) # Add labels
+
+png(here::here('results/figures','Figure2.png'), res=300, height=1700,width=1700)
+p
 dev.off()
-
 ```
-<br>
-
-*From Gelman 2008: The rescaled coefficients are directly interpretable as changes on the logit scale comparing each input variable at a low value to a high value: for the numeric predictors, this is the mean ?1 standard deviation, and for the indicators, this is each level compared with the mean.*
 
 
-Add in a sample size chart at the bottom
-```{r}
-n_df <- data.frame(duration=rep(c("High Duration","Mid Duration","No Closures"),2),
-                   region=c(rep("North",3),rep("Central",3)),
-                   n=c(4,9,27,3,0,27)) %>%
-  pivot_wider(names_from=duration,values_from=n)
-n_df <- as.data.frame(n_df)
-rownames(n_df) <- n_df$region; n_df$region <- NULL
-
-tbl1 <- tableGrob(n_df, theme=ttheme_minimal(base_size=11,
-                                              rowhead=list(fg_params=list(fontface="italic")),
-                                             colhead=list(fg_params=list(fontface="italic")),
-                                              core = list(padding=unit(c(-1, 0), "mm"))))
-
-
-myplot <- ggplot(data=filter(mydat,variable %in% c("D (high) : R (Central)","D (high)", "D (medium)", "R (Central)","Size")),
-                 aes(x=metric ,y=coefficients, fill=metric)) +
-  geom_col() +
-  geom_text(aes(x=metric ,y=adj_x,label=sig,angle=90),size=4) +
-  geom_hline(yintercept=0, color="grey40",lty="longdash") +
-  facet_grid(cols=vars(season),rows=vars(variable), switch="y") +
-  scale_fill_manual(values=rev(pnw_palette(name="Starfish",n=3,type="discrete"))) +
-  xlab("") +
-  ylab("Coefficient") +
-  ylim(c(-2,2.5)) +
-  coord_flip() +
-  theme_bw() +
-  theme(panel.grid.major.y=element_blank(),panel.grid.minor.y=element_blank(),
-        legend.position="none",
-        axis.text.y=element_text(size=14),
-        strip.text=element_text(size=14),
-        axis.title.x=element_text(size=12),
-        plot.margin=margin(0.1,0.1,-1,0,unit="cm"))
-
-
-lay <- rbind(c(1,1,1,1),
-             c(1,1,1,1),
-             c(1,1,1,1),
-             c(NA,NA,2,NA))
-grid.arrange(myplot,tbl1, layout_matrix=lay)
-
-
-png(here::here("output/linear_models/CoefStandard_3metrics_barplot_ssize.png"),height=980,width=480)
-grid.arrange(myplot,tbl1, layout_matrix=lay)
-dev.off()
-```
-<br>
-
-
-back-transform the coefficients on the logit scale (centralization, edge density)
-```{r}
-mydat <- mydat %>%
-  mutate(coefficients_scaled = ifelse(metric != "Modularity",
-                                      ifelse(coefficients > 0, invlogit(coefficients),-1*invlogit(coefficients)),coefficients)) %>%
-  mutate(adj_x=ifelse(coefficients_scaled<0,coefficients_scaled-0.1,coefficients_scaled+0.1))
-
-
-## plot
-myplot <- ggplot(data=filter(mydat,variable %in% c("D (high) : Region","D (high)","D (medium)", "Region","Size")),
-                 aes(x=metric ,y=coefficients_scaled, fill=metric)) +
-  geom_col() +
-  geom_text(aes(x=metric ,y=adj_x,label=sig,angle=90),size=4) +
-  geom_hline(yintercept=0, color="grey40",lty="longdash") +
-  facet_grid(cols=vars(season),rows=vars(variable), switch="y") +
-  scale_fill_manual(values=rev(pnw_palette(name="Starfish",n=3,type="discrete"))) +
-  xlab("") +
-  ylab("Coefficient") +
-  ylim(c(-1,1)) +
-  coord_flip() +
-  theme_bw() +
-  theme(panel.grid.major.y=element_blank(),panel.grid.minor.y=element_blank(),
-        legend.position="none",
-        axis.text.y=element_text(size=14),
-        strip.text=element_text(size=14),
-        axis.title.x=element_text(size=12),
-        plot.margin=margin(0.1,0.1,-1,0,unit="cm"))
-
-
-lay <- rbind(c(1,1,1,1),
-             c(1,1,1,1),
-             c(1,1,1,1),
-             c(NA,NA,2,NA))
-grid.arrange(myplot,tbl1, layout_matrix=lay)
-
-
-# png(here::here("output/linear_models/CoefStandard_3metrics_barplot_ssize_logittransf_update12-13.png"),height=820,width=480)
-# grid.arrange(myplot,tbl1, layout_matrix=lay)
-# dev.off()
-```
-<br>
-
-
-How much larger are the D(high) / D(high):Region(S) effects than the size or region effects?
-```{r}
-mydat %>%
-  filter(variable %in% c("D (high) : Region","D (high)", "Region","Size","Port Group")) %>%
-  dplyr::select(-coefficients,-sig,-adj_x) %>%
-  spread(key=variable,value=coefficients_scaled) %>%
-  mutate(DvR=abs(`D (high)`)/abs(Region),
-         DvS=abs(`D (high)`)/abs(Size),
-         DvP=abs(`D (high)`)/abs(`Port Group`),
-         DRvR=abs(`D (high) : Region`)/abs(Region),
-         DRvS=abs(`D (high) : Region`)/abs(Size),
-         DRvP=abs(`D (high) : Region`)/abs(`Port Group`)) %>%
-  dplyr::select(metric,season,DvR,DvS,DvP,DRvR,DRvS,DRvP) %>%
-  arrange(season)
-```
-<br>
